shipping.yaml
  #Set versi kubernetes
apiVersion: v1

#Set kubernetes object = Service
kind: Service

#Set Metadata = nama & label
metadata:
  name: shipping
  labels:
    app: shipping
    service: shipping
#Set spec network , port , selector
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: shipping
---

#Set versi kubernetes
apiVersion: apps/v1

#Set kubernetes object = Deployment
kind: Deployment

#Set Metadata = nama & label
metadata:
  name: shipping
  labels:
    app: shipping 
    version: v2

#Set disared state spec & selector & template
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: shipping

  template:
    metadata:
      labels:
        app: shipping

        
#Set Container spec
    spec:
      containers:
      #Set nama container      
        - name: shipping
      #Set pull image dari GHCR sesuai saran ke "2"        
          image: ghcr.io/sheikapraya/shipping-service:latest

          #Set container image port
          ports:
          - containerPort: 3001

#Set Environment
